--- a/src/routes/FavoriteHubs/style.css
+++ b/src/routes/FavoriteHubs/style.css
@@ -1,17 +1,17 @@
-.public_fixedDataTable_bodyRow.connected, 
-.public_fixedDataTable_bodyRow.connected span,
-.public_fixedDataTable_bodyRow.connected strong {
+.virtual-table .cell-wrapper.connected, 
+.virtual-table .cell-wrapper.connected span,
+.virtual-table .cell-wrapper.connected strong {
 	color: green;
 }
 
-.public_fixedDataTable_bodyRow.connecting, 
-.public_fixedDataTable_bodyRow.connecting span,
-.public_fixedDataTable_bodyRow.connecting strong {
+.virtual-table .cell-wrapper.connecting, 
+.virtual-table .cell-wrapper.connecting span,
+.virtual-table .cell-wrapper.connecting strong {
 	color: orange;
 }
 
-.public_fixedDataTable_bodyRow.disconnected, 
-.public_fixedDataTable_bodyRow.disconnected span,
-.public_fixedDataTable_bodyRow.disconnected strong {
+.virtual-table .cell-wrapper.disconnected, 
+.virtual-table .cell-wrapper.disconnected span,
+.virtual-table .cell-wrapper.disconnected strong {
 	color: black;
 }
